--- a/RNN.ipynb
+++ b/RNN.ipynb
@@ -7,7 +7,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "df = pd.read_csv('data/data.csv', delimiter=';', decimal=\",\")\n",
+    "df = pd.read_csv('data/data_09_10_2010.csv', delimiter=';', decimal=\",\")\n",
     "\n",
     "# Преобразование строки в periodStartDate и periodEndDate\n",
     "df[\"periodStartDate\"] = pd.to_datetime(df[\"periodStartDate\"], format=\"%d.%m.%Y %H:%M\")\n",
