--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('data/data.csv', delimiter=';', decimal=\",\")\n",
+    "df = pd.read_csv('data/data_09_10_2010.csv', delimiter=';', decimal=\",\")\n",
     "\n",
     "# Преобразование строки в periodStartDate и periodEndDate\n",
     "df[\"periodStartDate\"] = pd.to_datetime(df[\"periodStartDate\"], format=\"%d.%m.%Y %H:%M\")\n",
